--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
         <h2>I'm a pretend Web Developer</h2>
         <hr>
             <h3>
-            <a href="/4.3 HTML Porfolio Project/movie-ranking.html">Movie Ranking Project</a>
+            <a href="/movie-ranking.html">Movie Ranking Project</a>
             </h3>
             
-    <img src= "/4.3 HTML Porfolio Project/movie-ranking.png"
+    <img src= "/movie-ranking.png"
         width="350"
         height="350"
         alt="Movie Ranking Project Preview"/>
             <h3>
-                <a href="/4.3 HTML Porfolio Project/birthday-invite.html">Birthday Invite Project</a>
+                <a href="/birthday-invite.html">Birthday Invite Project</a>
             </h3>
-    <img src= "/4.3 HTML Porfolio Project/birthday-invite.png"    
+    <img src= "/birthday-invite.png"    
         width="350"
         height="350"
-        alt="Birthday Prject Preview"/>
+        alt="Birthday Project Preview"/>
 <hr>
-    <a href="/4.3 HTML Porfolio Project/about.html">About me</a>
-    <a href="/4.3 HTML Porfolio Project/contact.html">Contact Me</a>
+    <a href="/about.html">About me</a>
+    <a href="/contact.html">Contact Me</a>
 </body>
 </html>
 
