--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>I'm a pretend Web Developer</h2>
         <hr>
             <h3>
-            <a href="movie-ranking.html">Movie Ranking Project</a>
+            <a href="/html-trial/movie-ranking.html">Movie Ranking Project</a>
             </h3>
             
     <img src= "movie-ranking.png"
@@ -19,15 +19,15 @@
         height="350"
         alt="Movie Ranking Project Preview"/>
             <h3>
-                <a href="birthday-invite.html">Birthday Invite Project</a>
+                <a href="/html-trial/birthday-invite.html">Birthday Invite Project</a>
             </h3>
-    <img src= "./birthday-invite.png"    
+    <img src= "/html-trial/birthday-invite.png"    
         width="350"
         height="350"
         alt="Birthday Project Preview"/>
 <hr>
-    <a href="about.html">About me</a>
-    <a href="contact.html">Contact Me</a>
+    <a href="/html-trial/about.html">About me</a>
+    <a href="/html-trial/contact.html">Contact Me</a>
 </body>
 </html>
 
